--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <use href="./images/icons.svg#antenna"></use>
                         </svg>
                        </div>
-                        <h3 class="features-list__title">Внимание к деталям</h3>
+                        <h3 class="features__subtitle">Внимание к деталям</h3>
                         <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="features__item grid__item">
@@ -66,7 +66,7 @@
                                 <use href="./images/icons.svg#clock"></use>
                             </svg>
                            </div>
-                        <h3 class="features-list__title">Пунктуальность</h3>
+                        <h3 class="features__subtitle">Пунктуальность</h3>
                         <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>  
                     <li class="features__item grid__item">
@@ -75,7 +75,7 @@
                                 <use href="./images/icons.svg#diagram"></use>
                             </svg>
                            </div>
-                        <h3 class="features-list__title">Планирование</h3>
+                        <h3 class="features__subtitle">Планирование</h3>
                         <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="features__item grid__item">
@@ -84,7 +84,7 @@
                                 <use href="./images/icons.svg#astronaut"></use>
                             </svg>
                            </div>
-                        <h3 class="features-list__title">Современные технологии</h3>
+                        <h3 class="features__subtitle">Современные технологии</h3>
                         <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
@@ -97,7 +97,7 @@
                 <ul class="specialty-list grid">        
                     <li class="specialty__item grid__item">
                         <div class="specialty-thumb">
-                             <h3 class="specialty-list__title">Десктопные приложения</h3>
+                             <h3 class="specialty__subtitle">Десктопные приложения</h3>
                             <img class="specialty__img" src="./images/osobenosti/programer-working.jpg" 
                             alt="Программист работает в офисе за столом" 
                             width="370" height="294">
@@ -106,7 +106,7 @@
 
                     <li class="specialty__item grid__item">
                         <div class="specialty-thumb">
-                            <h3 class="specialty-list__title">Мобильные приложения</h3>
+                            <h3 class="specialty__subtitle">Мобильные приложения</h3>
                             <img class="specialty__img" src="./images/osobenosti/phone-designer.jpg" 
                             alt="Веб-дизайнер разрабатывает интерфейс приложения для смартфонов" 
                             width="370" height="294"> 
@@ -115,7 +115,7 @@
 
                     <li class="specialty__item grid__item">
                         <div class="specialty-thumb">
-                            <h3 class="specialty-list__title">Дизайнерские решения</h3>
+                            <h3 class="specialty__subtitle">Дизайнерские решения</h3>
                             <img class="specialty__img" src="./images/osobenosti/color-design.jpg" 
                             alt="Веб-дизайнер выбирает цвет на графическом планшете" 
                             width="370" height="294">
@@ -133,7 +133,7 @@
                         <img src="./images/komanda/ihor-demiyanenko.jpg" 
                         alt="Участник команды" width="270" height="260">
                         <div class="team__content">
-                            <h3 class="team-list__title">Игорь Демьяненко</h3>
+                            <h3 class="team__subtitle">Игорь Демьяненко</h3>
                             <p class="team__text">Product Designer</p>
                             <ul class="social-networks">
                                 <li><a class="social__link  social__team-link"  href=""> 
@@ -171,7 +171,7 @@
                         <img src="./images/komanda/olga-repina.jpg" alt="Участник команды" 
                         width="270" height="260">
                         <div class="team__content">
-                            <h3 class="team-list__title">Ольга Репина</h3>
+                            <h3 class="team__subtitle">Ольга Репина</h3>
                             <p class="team__text">Frontend Developer</p>
                             <ul class="social-networks">
                                 <li><a class="social__link  social__team-link"  href=""> 
@@ -209,7 +209,7 @@
                         <img src="./images/komanda/nikolay-tarasov.jpg" 
                         alt="Участник команды" width="270" height="260">
                         <div class="team__content">
-                            <h3 class="team-list__title">Николай Тарасов</h3>
+                            <h3 class="team__subtitle">Николай Тарасов</h3>
                             <p class="team__text">Marketing</p>
                             <ul class="social-networks">
                                 <li><a class="social__link  social__team-link"  href=""> 
@@ -247,7 +247,7 @@
                         <img src="./images/komanda/mixail-ermakov.jpg" 
                         alt="" width="270" height="260">
                         <div class="team__content">
-                            <h3 class="team-list__title">Михаил Ермаков</h3>
+                            <h3 class="team__subtitle">Михаил Ермаков</h3>
                             <p class="team__text">UI Designer</p>
                             <ul class="social-networks">
                                 <li><a class="social__link  social__team-link"  href=""> 
@@ -343,8 +343,8 @@
                 <address class="footer-address">
                     <p class="address__location">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="address-contacts">
-                        <li><a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        <li class="address-item"><a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address-item"><a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
