--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
       <section class="portfolio">
             <div class="container">
                 <h2 class="visually-hidden">Портфолио наших работ</h2>
-                <ul class="portfolio-filter">
+                <ul class="filter-list">
                     <li class="filter__item"><button class="filter__btn" type="button">Все</button></li>
                     <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button></li>
                     <li class="filter__item"><button class="filter__btn" type="button">Приложения</button></li>
@@ -182,8 +182,8 @@
                 <address class="footer-address">
                     <p class="address__location">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="address-contacts">
-                        <li><a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        <li  class="address-item"><a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li  class="address-item"><a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
